--- a/WebpackSslTest/WebpackSslTest.csproj
+++ b/WebpackSslTest/WebpackSslTest.csproj
@@ -18,6 +18,10 @@
 
   <ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.20" />
+	  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.3.3">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
